# Projekt---Tworzenie-produkt-w-opartych-o-dane

./: .gitattributes  .pre-commit-config.yaml  Application.py  Makefile  README.md  lint.sh  model_DT.pkl  pyproject.toml  test_raw_sales.csv  unit_test.py
.github/workflows/: python-app.yaml  python-linting.yaml
dockerfiles/: Dockerfile  docker-compose.yaml
modele/: model_FR.pkl
scripts/: run_docker.sh  run_tests.sh  run_tests_docker.sh
tests/: unit_test.py
