[tool.poetry]
name = "Projekt---Tworzenie-produkt-w-opartych-o-dane"
version = "1.0.0"
description = "Time series data classifier"
authors = [
	"Natalia Staśkiewicz",
	"Oliwia Żurkiewicz",
	"Marcin Armacki"
]
repository = "https://github.com/OliwiaZurkiewicz/Projekt---Tworzenie-produkt-w-opartych-o-dane.git"

[tool.poetry.dependencies]
python = "3.12.*"
plotly = "^5.22.0"
pandas = "^2.2.2"
dash = "^2.17.1"
scikit-learn = "^1.5.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.9"
black = "^24.4.2"
autoflake = "^2.3.1"
isort = "^5.13.2"
mypy = "^1.10.1"
pre-commit = "^3.7.1"
pytest = "^8.2.2"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = false
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
allow_redefinition = true
ignore_missing_imports = true
disable_error_code = ["attr-defined", "override", "arg-type", "union-attr"]

[tool.bandit]
exclude_dirs = []

[build-system]
requires = ["poetry-core<=1.7.*"]
build-backend = "poetry.core.masorny.api"
